<?xml version="1.0"?>
<package>
    <name>spacecraft</name>
    <version>0.0.0</version>
    <description>Spacecraft package</description>
    <maintainer email="funabiki@space.t.u-tokyo.ac.jp">Nobuhiro Funabiki</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>

</package>